@@ -5,11 +5,13 @@ BsMax is package of many different tools and UI simulator for [Blender 3D](https
 
 * Animatable Primitive Objects.
 * Many Different tools.
-* Make you comfortable if you are from other software (for now mostly 3Ds Max).
+* Make you comfortable if you are from other software (for now mostly 3DsMax).
 * BsMax do not makes dependency in you project. you can continue your project without BsMax any time.
 * Note: the only future the will not works without BsMax is "Animated Primitives" (Not the static ones).
 
 The goal of UI simulator is make people come form other software (like me) feel comfortable or who has to switch frequently between Blender or other software do not be confused.
+
+Your Reports and Ideas will help me alot and don't forget the sharing. let more people who needs this stuff know this is exist.
 
 # Installation
 
@@ -22,8 +24,8 @@ The goal of UI simulator is make people come form other software (like me) feel 
 
 # latest Updates
 
-* Hair guide from Curve operator added (for now select mesh search "Hair Guides From Curve" and pick Curve)
-* A Simple Camera lister added (Menu: Render > Camera Lister)
+* Weight paint to vertex paint convertor added (for now search for "Weight to Vertex Color").
+* Create Curve from hair guide tool added (for now search for "Hair Guides To Curve")
 * [Update History...](https://github.com/NevilArt/BsMax_2_80/blob/master/HISTORY.TXT)
 
 # License
