@@ -1,3 +1,7 @@
+# 0,1,0,20201106
+	Hair guide from Curve operator added (for now select mesh search "Hair Guides From Curve" and pick Curve)
+	A Simple Camera lister added (Menu: Render > Camera Lister)
+
 # 0,1,0,20201101
 	Character lister added (for now very simple stuff but in time other tools will be add)
 	Mesh edit mode 'Ctrl + M' Subdivid/MSmooth selected faces (Max mode only)
